projects/compiler/test/typechecker/invocation/error_macro_output_typechecker_error.out
Error at %FILE_NAME%:9:13
Macro 'uhOh' produced invalid code at this invocation site
  |  val x = uhOh()
                 ^
The generated code contains the following error:

Error at <generated by macro 'uhOh'>:1:3
Illegal operator
  |  []+1
       ^
No operator '+' exists between types <unknown>[] and Int
