projects/compiler/test/typechecker/invocation/error_macro_output_typechecker_error.abra
import macro, InjectedCode from "meta"

@macro
func uhOh(): InjectedCode {
  InjectedCode.new()
    .append("[]+1")
}

val x = uhOh()
